<resources>
    <string name="app_name">Color Flash</string>
    <string name="start_game">Start</string>
    <string name="color_to_chose">Click Start to Begin</string>
    <string name="card_image">card image</string>
    <string name="_0">0</string>
    <string name="end_game_coins">+ %1$s</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="start">Start</string>
    <string name="color_flash">Color Flash</string>
    <string name="nice_try_your_final_score_is">Nice try!\n Your final score is</string>
    <string name="menu">Menu</string>
    <string name="try_again">Try Again</string>
    <string name="scoreboard">Scoreboard</string>

    <string name="well_done_next_round">Well done, Next Round?</string>
    <string name="next">Next</string>
    <string name="score">Score</string>
    <string name="name">Name</string>
    <string name="friendly_message">Nice job genius</string>
    <string name="saved_user_name">SAVED_USER_NAME</string>
    <string name="logo">logo</string>
    <string name="application_name">application name</string>
    <string name="current_score">Score :</string>
    <string name="high_score_text">Best :</string>
    <string name="local_high_score">local_high_score</string>
    <string name="how_to_play">How To Play</string>
    <string name="store_game">Store</string>
    <string name="play_game">Play</string>
    <string name="settings_game">Settings</string>
    <string name="challenge_mode">Challenge Mode</string>
    <string name="classic_mode">Classic Mode</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="choose_your_difficulty">Choose Your Difficulty</string>
    <string name="coins">%1$s</string>
    <string name="power_up_1">Power Up 1</string>
    <string name="power_up_1_status">Cost: 10 Own: %1$s</string>
    <string name="power_up_2">Power Up 2</string>
    <string name="power_up_2_status">Cost: 20 Own: %1$s</string>
    <string name="power_up_3">Power Up 3</string>
    <string name="power_up_3_status">Cost: 15 Own: %1$s</string>
    <string name="power_up_4">Power Up 4</string>
    <string name="power_up_4_status">Cost: 50 Own: %1$s</string>
    <string name="power_up_name">Name</string>
    <string name="power_up_desc">Description</string>
    <string name="power_up_q">X%1$s</string>
    <string name="buy">Buy</string>
    <string name="power_up_cost">Cost: %1$s</string>
    <string name="power_up_image">Power up image</string>

    <!--How to play strings-->
    <string name="how_to_1_instructions">Welcome to Color Flash Game! To play, look at the board and memorize which tiles are Red</string>
    <string name="how_to_2_instructions">Now all the tiles have turned gray. Oh no! Tap the tiles that were Red to finish the level.</string>
    <string name="how_to_3_instructions">There are four power ups to use. Try them out!</string>
    <string name="how_to_4_instructions">Congrats! You now know how to play Color Flash Game! Easy right? You may think so now, but as you complete more levels, the tiles will turn to gray faster and faster! You can also try out challenge mode for different types of challenges. How many levels can you complete?</string>
    <string name="how_to_red">Red</string>
    <string name="how_to_complete_instructions">Great job! You found all the Red Tiles. Swipe left to continue.</string>
    <string name="how_to_let_s_play">Let\'s Play!</string>
    <string name="scoreboard_challenge_mode">CgkI_sfS6oMXEAIQAA</string>
    <string name="scoreboard_hard_mode">CgkI_sfS6oMXEAIQBQ</string>
    <string name="scoreboard_easy_mode">CgkI_sfS6oMXEAIQBA</string>
    <string name="difficulty_easy">CLASSIC_MODE_EASY</string>
    <string name="difficulty_hard">CLASSIC_MODE_HARD</string>
    <string name="difficulty_challenge">CHALLENGE_MODE</string>
    <string name="scoreboard_text">Scoreboard</string>
    <string name="watch_video_for_50_coins">Watch video for +50 coins!</string>
    <string name="game_over_challenge_mode">Game Over</string>
    <string name="game_over_image">Game over image</string>
    <string name="coin_image">coin image</string>

</resources>
