<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDarkGrey"
    tools:context=".android.activity.MenuActivity">


    <Button
        android:id="@+id/game_scoreboard"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_green_card"
        android:fontFamily="casual"
        android:text="@string/scoreboard_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical"
        app:layout_constraintTop_toBottomOf="@+id/game_store" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:horizontalSpacing="0dp"
        android:numColumns="4"
        android:orientation="horizontal"
        android:verticalSpacing="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top" />

    <Button
        android:id="@+id/game_settings"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@color/cardRed"
        android:fontFamily="casual"
        android:text="@string/settings_game"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/how_to_play" />

    <Button
        android:id="@+id/game_store"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@color/cardBlue"
        android:fontFamily="casual"
        android:text="@string/store_game"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical"
        app:layout_constraintTop_toBottomOf="@+id/play_game" />

    <Button
        android:id="@+id/play_game"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:background="@color/cardGreen"
        android:fontFamily="casual"
        android:text="@string/play_game"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottom" />

    <Button
        android:id="@+id/how_to_play"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@color/cardYellow"
        android:fontFamily="casual"
        android:text="@string/how_to_play"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_game" />

    <android.support.constraint.Guideline
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <android.support.constraint.Guideline
        android:id="@+id/vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/applicatin_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/application_name"
        app:layout_constraintBottom_toTopOf="@+id/top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/word_mark" />

</android.support.constraint.ConstraintLayout>